in progress supporting bladeRF

--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -1,4 +1,4 @@
-#top dir cmake project for libhackrf + tools
+#top dir cmake project for hackrf and bladeRF BTLE tools
 
 cmake_minimum_required(VERSION 2.8)
 project (btle_all)
