--- a/host/btle-tools/src/CMakeLists.txt
+++ b/host/btle-tools/src/CMakeLists.txt
@@ -43,6 +43,10 @@ include_directories(${LIBHACKRF_INCLUDE_DIR})
 LIST(APPEND TOOLS_LINK_LIBS ${LIBHACKRF_LIBRARIES})
 ENDIF (USE_BLADERF MATCHES 1)
 
+IF(NOT DEFINED C_INLINE)
+   ADD_DEFINITIONS("-Dinline=")
+ENDIF(NOT DEFINED C_INLINE)
+
 if(MSVC)
 LIST(APPEND TOOLS_LINK_LIBS libgetopt_static)
 endif()
