adding auto board detection

--- a/host/btle-tools/CMakeLists.txt
+++ b/host/btle-tools/CMakeLists.txt
@@ -39,17 +39,39 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu90")
 endif()
 
 # Find needed packages.
-IF (USE_BLADERF MATCHES 1)
-  MESSAGE(STATUS "Use BLADERF")
-  find_package(LIBBLADERF REQUIRED)
+# IF (USE_BLADERF MATCHES 1)
+#   MESSAGE(STATUS "Use BLADERF")
+#   find_package(LIBBLADERF REQUIRED)
+#   include_directories(${LIBBLADERF_INCLUDE_DIR})
+#   set(USE_RFBOARD "USE_BLADERF")
+# ELSE (USE_BLADERF MATCHES 1)
+#   MESSAGE(STATUS "Use HACKRF")
+#   find_package(LIBHACKRF REQUIRED)
+#   include_directories(${LIBHACKRF_INCLUDE_DIR})
+#   set(USE_RFBOARD "USE_HACKRF")
+# ENDIF (USE_BLADERF MATCHES 1)
+
+MESSAGE(STATUS "Checking BLADERF lib ...")
+find_package(LIBBLADERF)
+IF (LIBBLADERF_FOUND)
   include_directories(${LIBBLADERF_INCLUDE_DIR})
-  set(USE_RFBOARD "USE_BLADERF")
-ELSE (USE_BLADERF MATCHES 1)
-  MESSAGE(STATUS "Use HACKRF")
-  find_package(LIBHACKRF REQUIRED)
+  set(LIBBLADERF_FOUND_RESULT "1")
+  MESSAGE(STATUS "LIBBLADERF_FOUND_RESULT 1")
+ELSE (LIBBLADERF_FOUND)
+  set(LIBBLADERF_FOUND_RESULT "0")
+  MESSAGE(STATUS "LIBBLADERF_FOUND_RESULT 0")
+ENDIF (LIBBLADERF_FOUND)
+
+MESSAGE(STATUS "Checking HACKRF lib ...")
+find_package(LIBHACKRF)
+IF (LIBHACKRF_FOUND)
   include_directories(${LIBHACKRF_INCLUDE_DIR})
-  set(USE_RFBOARD "USE_HACKRF")
-ENDIF (USE_BLADERF MATCHES 1)
+  set(LIBHACKRF_FOUND_RESULT "1")
+  MESSAGE(STATUS "LIBHACKRF_FOUND_RESULT 1")
+ELSE (LIBHACKRF_FOUND)
+  set(LIBHACKRF_FOUND_RESULT "0")
+  MESSAGE(STATUS "LIBHACKRF_FOUND_RESULT 0")
+ENDIF (LIBHACKRF_FOUND)
 
 CONFIGURE_FILE (
   "${PROJECT_SOURCE_DIR}/include/common.h.in"
