--- a/host/btle-tools/src/CMakeLists.txt
+++ b/host/btle-tools/src/CMakeLists.txt
@@ -34,13 +34,23 @@ install(TARGETS btle_tx RUNTIME DESTINATION ${INSTALL_DEFAULT_BINDIR})
 add_executable(btle_rx btle_rx.c)
 install(TARGETS btle_rx RUNTIME DESTINATION ${INSTALL_DEFAULT_BINDIR})
 
-IF (USE_BLADERF MATCHES 1)
-include_directories(${LIBBLADERF_INCLUDE_DIR})
-LIST(APPEND TOOLS_LINK_LIBS ${LIBBLADERF_LIBRARIES})
-ELSE (USE_BLADERF MATCHES 1)
+# IF (USE_BLADERF MATCHES 1)
+# include_directories(${LIBBLADERF_INCLUDE_DIR})
+# LIST(APPEND TOOLS_LINK_LIBS ${LIBBLADERF_LIBRARIES})
+# ELSE (USE_BLADERF MATCHES 1)
+# include_directories(${LIBHACKRF_INCLUDE_DIR})
+# LIST(APPEND TOOLS_LINK_LIBS ${LIBHACKRF_LIBRARIES})
+# ENDIF (USE_BLADERF MATCHES 1)
+
+IF (LIBBLADERF_FOUND)
+    include_directories(${LIBBLADERF_INCLUDE_DIR})
+    LIST(APPEND TOOLS_LINK_LIBS ${LIBBLADERF_LIBRARIES})
+ENDIF (LIBBLADERF_FOUND)
+
+IF (LIBHACKRF_FOUND)
 include_directories(${LIBHACKRF_INCLUDE_DIR})
 LIST(APPEND TOOLS_LINK_LIBS ${LIBHACKRF_LIBRARIES})
-ENDIF (USE_BLADERF MATCHES 1)
+ENDIF (LIBHACKRF_FOUND)
 
 IF(NOT DEFINED C_INLINE)
    ADD_DEFINITIONS("-Dinline=")
@@ -52,11 +62,11 @@ endif()
 
 target_link_libraries(btle_tx ${TOOLS_LINK_LIBS} m)
 
-IF (USE_BLADERF MATCHES 1)
+# IF (USE_BLADERF MATCHES 1)
 target_link_libraries(btle_rx ${TOOLS_LINK_LIBS} m -lpthread)
-ELSE (USE_BLADERF MATCHES 1)
-target_link_libraries(btle_rx ${TOOLS_LINK_LIBS} m)
-ENDIF (USE_BLADERF MATCHES 1)
+# ELSE (USE_BLADERF MATCHES 1)
+# target_link_libraries(btle_rx ${TOOLS_LINK_LIBS} m)
+# ENDIF (USE_BLADERF MATCHES 1)
 
 # MESSAGE(STATUS "1")
 # MESSAGE(STATUS ${LIBBLADERF_LIBRARIES})
