--- a/host/btle-tools/CMakeLists.txt
+++ b/host/btle-tools/CMakeLists.txt
@@ -73,6 +73,17 @@ ELSE (LIBHACKRF_FOUND)
   MESSAGE(STATUS "LIBHACKRF_FOUND_RESULT 0")
 ENDIF (LIBHACKRF_FOUND)
 
+MESSAGE(STATUS "Checking UHD lib ...")
+find_package(UHD)
+IF (LIBUHD_FOUND)
+  include_directories(${UHD_INCLUDE_DIRS})
+  set(LIBUHD_FOUND_RESULT "1")
+  MESSAGE(STATUS "LIBUHD_FOUND_RESULT 1")
+ELSE (LIBUHD_FOUND)
+  set(LIBUHD_FOUND_RESULT "0")
+  MESSAGE(STATUS "LIBUHD_FOUND_RESULT 0")
+ENDIF (LIBUHD_FOUND)
+
 CONFIGURE_FILE (
   "${PROJECT_SOURCE_DIR}/include/common.h.in"
   "${PROJECT_SOURCE_DIR}/src/common.h"
