--- a/host/btle-tools/src/CMakeLists.txt
+++ b/host/btle-tools/src/CMakeLists.txt
@@ -48,9 +48,14 @@ IF (LIBBLADERF_FOUND)
 ENDIF (LIBBLADERF_FOUND)
 
 IF (LIBHACKRF_FOUND)
-include_directories(${LIBHACKRF_INCLUDE_DIR})
-LIST(APPEND TOOLS_LINK_LIBS ${LIBHACKRF_LIBRARIES})
+    include_directories(${LIBHACKRF_INCLUDE_DIR})
+    LIST(APPEND TOOLS_LINK_LIBS ${LIBHACKRF_LIBRARIES})
 ENDIF (LIBHACKRF_FOUND)
+
+IF (LIBUHD_FOUND)
+    include_directories(${UHD_INCLUDE_DIRS})
+    LIST(APPEND TOOLS_LINK_LIBS ${UHD_LIBRARIES})
+ENDIF (LIBUHD_FOUND)
 
 IF(NOT DEFINED C_INLINE)
    ADD_DEFINITIONS("-Dinline=")
